fureverfriends/kube/pet_web_deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: carlos-final
  name: carlos-final-web-deployment
  labels:
    app: carlos-final-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: carlos-final-web
  template:
    metadata:
      labels:
        app: carlos-final-web
    spec:
      containers:
        - name: carlos-final-web
          image: carlosblanco1/carlos-final-web:${TAG_ID}
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 5
