fureverfriends/kube/pet_db_svc.yml
apiVersion: v1
kind: Service
metadata:
  name: db-service
  namespace: carlos-final
spec:
  type: ClusterIP
  selector:
    app: carlos-final-db
  ports:
    - port: 5432               
      targetPort: 5432
