fureverfriends/kube/pet_web_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: carlos-final
  name: carlos-final-web-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: carlos-final.duckdns.org 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: carlos-final-web-service
            port:
              number: 3000
